--- a/src/main/resources/splines.fxml
+++ b/src/main/resources/splines.fxml
@@ -10,7 +10,7 @@
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.layout.VBox?>
 
-<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="670.0" prefWidth="950.0" xmlns="http://javafx.com/javafx/8.0.112" xmlns:fx="http://javafx.com/fxml/1" fx:controller="spline.SplineController">
+<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="670.0" prefWidth="950.0" xmlns="http://javafx.com/javafx/8.0.92" xmlns:fx="http://javafx.com/fxml/1" fx:controller="spline.SplineController">
    <children>
       <VBox layoutX="736.0" layoutY="5.0" prefHeight="609.0" prefWidth="100.0" AnchorPane.rightAnchor="5.0" AnchorPane.topAnchor="5.0">
          <children>
@@ -40,7 +40,7 @@
             <content>
               <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="600.0" prefWidth="800.0">
                      <children>
-                        <Canvas fx:id="canvasG" height="590.0" layoutX="5.0" layoutY="5.0" width="790.0" />
+                        <Canvas fx:id="canvasG" onMouseMoved="#moveG" height="590.0" layoutX="5.0" layoutY="5.0" width="790.0" />
                      </children></AnchorPane>
             </content>
           </Tab>
