--- a/src/main/resources/form.fxml
+++ b/src/main/resources/form.fxml
@@ -11,47 +11,37 @@
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.layout.VBox?>
 
-<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="670.0" prefWidth="950.0" xmlns="http://javafx.com/javafx/8.0.92" xmlns:fx="http://javafx.com/fxml/1" fx:controller="parabolic.FormController">
-   <children>
-      <VBox layoutX="736.0" layoutY="5.0" prefHeight="609.0" prefWidth="100.0" AnchorPane.rightAnchor="5.0" AnchorPane.topAnchor="5.0">
-         <children>
-            <Button fx:id="draw" mnemonicParsing="false" onAction="#onDraw" prefWidth="100.0" text="Draw" />
-            <TextField fx:id="coordinatesX" prefWidth="90.0"/>
-            <TextField fx:id="coordinatesY" prefWidth="90.0"/>
-         </children>
-      </VBox>
-      <TabPane layoutX="14.0" layoutY="10.0" prefHeight="632.0" prefWidth="810.0" tabClosingPolicy="UNAVAILABLE">
-        <tabs>
-          <Tab text="Graphic">
-            <content>
-              <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="610.0" prefWidth="809.0">
-                     <children>
-                        <Canvas fx:id="canvas" height="600.0" width="800.0" AnchorPane.leftAnchor="5.0" AnchorPane.topAnchor="5.0" onMouseMoved="#move" />
-                     </children>
-                  </AnchorPane>
-            </content>
-          </Tab>
-          <Tab text="Table" fx:id="tabTable">
-            <content>
-              <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="600.0" prefWidth="800.0">
-                     <children>
-                        <TableView fx:id="table" layoutX="6.0" layoutY="8.0" prefHeight="600.0" prefWidth="800.0">
-                          <columns>
-                            <TableColumn fx:id="xx" prefWidth="100.0" text="z" />
-                            <TableColumn fx:id="fx" prefWidth="100.0" text="f(z)" />
-                            <TableColumn fx:id="phi" prefWidth="100.0" text="phi(z)" />
-                            <TableColumn fx:id="diff" prefWidth="100.0" text="f(z) - phi(z)" />
-                            <TableColumn fx:id="error" prefWidth="200.0" text="|f(z) - phi(z)|/f(z) * 100%" />
-                          </columns>
-                        </TableView>
-                     </children>
-                  </AnchorPane>
-            </content>
-          </Tab>
-        </tabs>
-      </TabPane>
-   </children>
-   <padding>
-      <Insets bottom="5.0" left="5.0" right="5.0" top="5.0" />
-   </padding>
+<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="670.0"
+            prefWidth="950.0" xmlns="http://javafx.com/javafx/8.0.92" xmlns:fx="http://javafx.com/fxml/1"
+            fx:controller="parabolic.FormController">
+    <padding>
+        <Insets bottom="5.0" left="5.0" right="5.0" top="5.0"/>
+    </padding>
+    <VBox layoutX="736.0" layoutY="5.0" prefHeight="609.0" prefWidth="100.0" AnchorPane.rightAnchor="5.0"
+          AnchorPane.topAnchor="5.0">
+        <Button mnemonicParsing="false" onAction="#onDraw" prefWidth="100.0" text="Draw"/>
+        <TextField fx:id="coordinatesX" prefWidth="90.0"/>
+        <TextField fx:id="coordinatesY" prefWidth="90.0"/>
+    </VBox>
+    <TabPane layoutX="14.0" layoutY="10.0" prefHeight="632.0" prefWidth="810.0" tabClosingPolicy="UNAVAILABLE">
+        <Tab text="Graphic">
+            <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="610.0" prefWidth="809.0">
+                <Canvas fx:id="canvas" height="600.0" width="800.0" AnchorPane.leftAnchor="5.0"
+                        AnchorPane.topAnchor="5.0" onMouseMoved="#move"/>
+            </AnchorPane>
+        </Tab>
+        <Tab text="Table">
+            <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="600.0" prefWidth="800.0">
+                <TableView fx:id="table" layoutX="6.0" layoutY="8.0" prefHeight="600.0" prefWidth="800.0">
+                    <columns>
+                        <TableColumn fx:id="xx" prefWidth="100.0" text="z"/>
+                        <TableColumn fx:id="fx" prefWidth="100.0" text="f(z)"/>
+                        <TableColumn fx:id="phi" prefWidth="100.0" text="phi(z)"/>
+                        <TableColumn fx:id="diff" prefWidth="100.0" text="f(z) - phi(z)"/>
+                        <TableColumn fx:id="error" prefWidth="200.0" text="|f(z) - phi(z)|/f(z) * 100%"/>
+                    </columns>
+                </TableView>
+            </AnchorPane>
+        </Tab>
+    </TabPane>
 </AnchorPane>
