--- a/src/main/resources/iteration.fxml
+++ b/src/main/resources/iteration.fxml
@@ -8,43 +8,40 @@
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.layout.ColumnConstraints?>
 <?import javafx.scene.layout.GridPane?>
-<?import javafx.scene.layout.Region?>
 <?import javafx.scene.layout.RowConstraints?>
 <?import javafx.scene.layout.VBox?>
 
-<GridPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="620.0" prefWidth="730.0" xmlns="http://javafx.com/javafx/8.0.92" xmlns:fx="http://javafx.com/fxml/1" fx:controller="iteration.IterationController">
-  <columnConstraints>
-    <ColumnConstraints hgrow="SOMETIMES" maxWidth="448.0" minWidth="10.0" prefWidth="415.0" />
-    <ColumnConstraints hgrow="SOMETIMES" maxWidth="309.0" minWidth="10.0" prefWidth="306.0" halignment="LEFT" />
-  </columnConstraints>
-  <rowConstraints>
-    <RowConstraints minHeight="10.0" prefHeight="310.0" vgrow="SOMETIMES" valignment="TOP" />
-    <RowConstraints minHeight="10.0" prefHeight="310.0" vgrow="SOMETIMES" />
-  </rowConstraints>
-   <padding>
-      <Insets bottom="5.0" left="5.0" right="5.0" top="5.0" />
-   </padding>
-   <children>
-      <AnchorPane prefWidth="300.0">
-         <children>
-             <Canvas fx:id="function" height="300.0" layoutX="0.0" layoutY="0.0" nodeOrientation="INHERIT" onMouseMoved="#moved" width="400.0" AnchorPane.leftAnchor="0.0" AnchorPane.topAnchor="0.0" />
-             <Label fx:id="cX" text="X:" AnchorPane.leftAnchor="330.0" />
-            <Label fx:id="cY" scaleZ="2" text="Y:" AnchorPane.leftAnchor="330.0" AnchorPane.topAnchor="15.0" />
-         </children>
-      </AnchorPane>
-      <Canvas fx:id="approx" height="300.0" onMouseMoved="#movedG" width="400.0" GridPane.rowIndex="1" />
-      <Canvas fx:id="derivative" height="300.0" width="300.0" GridPane.columnIndex="1"/>
-      <VBox prefHeight="200.0" prefWidth="300.0" GridPane.columnIndex="1" GridPane.rowIndex="1">
-         <children>
-            <Button fx:id="draw" mnemonicParsing="false" onAction="#drawClick" prefHeight="26.0" prefWidth="300.0" text="Calc root and draw graphics " />
-            <TextArea fx:id="area" minHeight="260.0" prefHeight="260.0" prefWidth="300.0" wrapText="true" />
-         </children>
-         <opaqueInsets>
-            <Insets bottom="5.0" left="0.0" right="5.0" top="5.0" />
-         </opaqueInsets>
-         <GridPane.margin>
-            <Insets bottom="5.0" left="0.0" right="5.0" top="5.0" />
-         </GridPane.margin>
-      </VBox>
-   </children>
+<GridPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="620.0"
+          prefWidth="730.0" xmlns="http://javafx.com/javafx/8.0.92" xmlns:fx="http://javafx.com/fxml/1"
+          fx:controller="iteration.IterationController">
+    <columnConstraints>
+        <ColumnConstraints hgrow="SOMETIMES" maxWidth="448.0" minWidth="10.0" prefWidth="415.0"/>
+        <ColumnConstraints hgrow="SOMETIMES" maxWidth="309.0" minWidth="10.0" prefWidth="306.0" halignment="LEFT"/>
+    </columnConstraints>
+    <rowConstraints>
+        <RowConstraints minHeight="10.0" prefHeight="310.0" vgrow="SOMETIMES" valignment="TOP"/>
+        <RowConstraints minHeight="10.0" prefHeight="310.0" vgrow="SOMETIMES"/>
+    </rowConstraints>
+    <padding>
+        <Insets bottom="5.0" left="5.0" right="5.0" top="5.0"/>
+    </padding>
+    <AnchorPane prefWidth="300.0">
+        <Canvas fx:id="function" height="300.0" nodeOrientation="INHERIT"
+                onMouseMoved="#moved" width="400.0" AnchorPane.leftAnchor="0.0" AnchorPane.topAnchor="0.0"/>
+        <Label fx:id="cX" text="X:" AnchorPane.leftAnchor="330.0"/>
+        <Label fx:id="cY" scaleZ="2" text="Y:" AnchorPane.leftAnchor="330.0" AnchorPane.topAnchor="15.0"/>
+    </AnchorPane>
+    <Canvas fx:id="approx" height="300.0" onMouseMoved="#movedG" width="400.0" GridPane.rowIndex="1"/>
+    <Canvas fx:id="derivative" height="300.0" width="300.0" GridPane.columnIndex="1"/>
+    <VBox prefHeight="200.0" prefWidth="300.0" GridPane.columnIndex="1" GridPane.rowIndex="1">
+        <opaqueInsets>
+            <Insets bottom="5.0" right="5.0" top="5.0"/>
+        </opaqueInsets>
+        <GridPane.margin>
+            <Insets bottom="5.0" right="5.0" top="5.0"/>
+        </GridPane.margin>
+        <Button fx:id="draw" mnemonicParsing="false" onAction="#drawClick" prefHeight="26.0" prefWidth="300.0"
+                text="Calc root and draw graphics "/>
+        <TextArea fx:id="area" minHeight="260.0" prefHeight="260.0" prefWidth="300.0" wrapText="true"/>
+    </VBox>
 </GridPane>
